--- a/templates/criar-lembrete.html
+++ b/templates/criar-lembrete.html
@@ -1,6 +1,6 @@
 
 	 <md-subheader layout="row" class="md-accent" >Criando lembretes</md-subheader>
-	 <md-content md-theme="docs-dark" layout-padding layout="row" layout-sm="column">
+	 <md-content layout-padding layout="row" layout-sm="column">
 	    <md-input-container>
 	      <label>Title</label>
 	      <input ng-model="obj.title" >
