--- a/templates/criar-tarefa.html
+++ b/templates/criar-tarefa.html
@@ -1,5 +1,5 @@
    <md-subheader layout="row" class="md-accent" >Criando tarefa!</md-subheader>
- <md-content md-theme="docs-dark" layout-padding layout="row" layout-sm="column">
+ <md-content layout-padding layout="row" layout-sm="column">
     <md-input-container>
       <label>Title</label>
       <input ng-model="tar.title" >
@@ -24,4 +24,6 @@ placeholder="Date" min-date="date" ng-model="dateTime" class=" md-input" data-de
 <md-content layout="row" layout-align="center start">
   <md-button class="md-raised md-primary" flex-sm="80" flex="40" ng-click="salvarTarefa(tar)">Salvar tarefa</md-button>
 </md-content>
+
+
 </form>
